winter vocation homework

--- a/fs_be_w1/templates/bbs.html
+++ b/fs_be_w1/templates/bbs.html
@@ -16,3 +16,14 @@
         </div>
     {% endfor %}
 {% endblock %}
+
+
+{% block js_code %}
+    <script>
+        $(document).ready(
+            function () {
+                $("#nav-2").addClass('active')
+            }
+        );
+    </script>
+{% endblock %}
