--- a/fs_be_w1/templates/index.html
+++ b/fs_be_w1/templates/index.html
@@ -9,3 +9,14 @@
     </div>
 
 {% endblock %}
+
+
+{% block js_code %}
+    <script>
+        $(document).ready(
+            function () {
+                $("#nav-1").addClass('active')
+            }
+        );
+    </script>
+{% endblock %}
