--- a/fs_be_w1/templates/user_login.html
+++ b/fs_be_w1/templates/user_login.html
@@ -1,16 +1,17 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    {% for message in get_flashed_messages(category_filter=['error'])%}
-    <h3 style="color:red">{{ message }}</h3>
+    {% for message in get_flashed_messages(category_filter=['error']) %}
+        <h3 style="color:red">{{ message }}</h3>
     {% endfor %}
-    {% for message in get_flashed_messages(category_filter=['okey'])%}
-    <h3 style="color:blue">{{ message }}</h3>
+    {% for message in get_flashed_messages(category_filter=['okey']) %}
+        <h3 style="color:blue">{{ message }}</h3>
     {% endfor %}
     <form role="form" method="post" class="col-md-6 col-lg-offset-2">
         <div class="form-group">
             <label for="user_email">账号</label>
-            <input type="email" id="user_email" name="user_email" class="form-control">
+            <input type="email" id="user_email" name="user_email" class="form-control"
+                   value="{{ request.args.username }}">
         </div>
         <div class="form-group">
             <label for="user_pwd">密码</label>
@@ -22,4 +23,15 @@
         </div>
     </form>
 
+{% endblock %}
+
+
+{% block js_code %}
+    <script>
+        $(document).ready(
+            function () {
+                $("#nav-5").addClass('active')
+            }
+        );
+    </script>
 {% endblock %}
